package edu.austral.ingsis.clifford.command;

import edu.austral.ingsis.clifford.Result;

public class Mkdir implements Command{
    public Result execute(String parameter) {
        return null;
    }
}
